--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "boxicons": "^2.1.4",
     "file-saver": "^2.0.5",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
